force-app/main/default/objects/KimbleOne__Payment__c/KimbleOne__Payment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <description>Payment received from a Customer.</description>
    <label>Payment</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>