force-app/main/default/objects/KimbleOne__Payment__c/fields/KimbleOne__Account__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer that payment received from.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>