force-app/main/default/objects/KimbleOne__Payment__c/fields/KimbleOne__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PaymentAmount__c</fullName>
    <description>Amount of the payment made.</description>
    <label>Payment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>