force-app/main/default/objects/KimbleOne__Payment__c/fields/KimbleOne__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PaymentDate__c</fullName>
    <description>The date payment was made.</description>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>